<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about">About</string>
    <string name="app_name" translatable="false">anyRemote</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnOk">Ok</string>
    <string name="searchFormUnconnected">Unconnected</string>
    <string name="exit_item">Exit</string>
    <string name="connect_item">Connect</string>
    <string name="disconnect_item">Disconnect</string>
    <string name="search_item">Search</string>
    <string name="searching">Searching &#8230;</string>
    <string name="cancel_search_item">Cancel Search</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_item_name">Change Friendly Name</string>
    <string name="enter_item_addr">Change Address</string>
    <string name="enter_item_pass">Change Password</string>
    <string name="enter_pass">Enter Password</string>
    <string name="label_pass">Password</string>
    <string name="label_addr">Address</string>
    <string name="label_name">Name</string>
    <string name="clean_item">Clean Address</string>
    <string name="autoconnect_item">Autoconnect</string>
    <string name="log_item">Log</string>
    <string name="clear_log_item">Clear Log</string>
    <string name="mouse_item">Mouse</string>
    <string name="keyboard_item">Keyboard</string>
    <string name="back_item">Back</string>
    <string name="report_bug_item">"Report Bug"</string>
    <string name="default_bt" translatable="false">btspp://0008F4163049</string>
    <string name="default_ip" translatable="false">socket://192.168.1.1:5197</string>
    <string name="connect_to">Connect To</string>
    <string name="autoconnect_to">Auto-Connect To</string>
    <string name="connection_successful">Connected</string>
    <string name="connection_failed">Disconnected</string>
    <string name="not_found">No anyRemote servers found</string>
    <string name="bt_turning_on">"Bluetooth turning on"</string>
    <string name="bt_turning_off">"Bluetooth turning off"</string>
    <string name="bt_off">"Bluetooth off"</string>
    <string name="bt_on">"Bluetooth on"</string>
    <string name="bluetooth" translatable="false">"Bluetooth"</string>
    <string name="tcpip" translatable="false">"TCP/IP"</string>
    <string name="zeroconf">"Use zeroconf"</string>
    <string name="sensor">"Sensor Type"</string>
    <string name="gyroscope">"Gyroscope"</string>
    <string name="accelerometer">"Accelerometer"</string>
    
    <string name="b1" translatable="false">"1"</string>
    <string name="b2" translatable="false">"2"</string>
    <string name="b3" translatable="false">"3"</string>
    <string name="b4" translatable="false">"4"</string>
    <string name="b5" translatable="false">"5"</string>
    <string name="b6" translatable="false">"6"</string>
    <string name="b7" translatable="false">"7"</string>
    <string name="b8" translatable="false">"8"</string>
    <string name="b9" translatable="false">"9"</string>
    <string name="b10" translatable="false">"*"</string>
    <string name="b11" translatable="false">"0"</string>
    <string name="b12" translatable="false">"#"</string>

    <string name="alt_f4" translatable="false">AltF4</string>
    <string name="escape" translatable="false">Escape</string>
    <string name="enter" translatable="false">Enter</string>
    <string name="backspace" translatable="false">Backspace</string>
    
    <string name="cover_description">"Cover Image"</string>

    <string name="dummy" translatable="false">""</string>
    
</resources>