<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/searchGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/searchBtCheckbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/bluetooth" />

        <RadioButton
            android:id="@+id/searchIPCheckbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tcpip" />

        </RadioGroup>
    
   <LinearLayout
        android:id="@+id/searchBtnBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/searchDialogButtonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/search_item" >
        </Button>

        <Button
            android:id="@+id/searchDialogButtonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/btnCancel" >
        </Button>
    </LinearLayout>
    
</LinearLayout>